# haskell-programmming-exercise

./: README.md
chapter11/: AsPatterns.hs  Database.hs  Jammin.hs  Language.hs  Main.hs  Phone.hs  Razor.hs  ScansExs.hs  TooMany.hs  Types.hs  Vechies.hs  Vigenere.hs  hs.cabal
chapter12/: CountThe.hs  MyEitherLib.hs  MyMaybeLib.hs  MyTree.hs  MyUnfolds.hs  StringProcessing.hs  Vowels.hs
chapter13/: Cipher.hs  Hangman.hs  Palindrome.hs
chapter13/gimmePerson/: GimmePerson.hs  Main.hs  gimmePerson.cabal
chapter14/Addition/: Addition.cabal  Addition.hs
chapter14/Kicking.hsproj/: .uuid  CoArbitrary.hs  Kicking.cabal  Kicking.hs  WordNumberTest.hs  _Kicking.hsplay
chapter14/WordNumberTest/: WordNumber.cabal
chapter14/WordNumberTest/app/: Main.hs
chapter14/WordNumberTest/src/: RandomGenForDataType.hs  UsingQuickCheck.hs  WordNumber.hs
chapter14/WordNumberTest/test/: WordNumberTest.hs
chapter14/morse/: morse.cabal
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/tests/: tests.hs
chapter15/: Mem.hs  stack.yaml
chapter15/chapter15/: chapter15.cabal
chapter15/chapter15/app/: Main.hs
chapter15/chapter15/src/: BoolConj.hs  BoolDisj.hs  Combine  Combine.hs  First.hs  Four.hs  Identity.hs  Indetity.hs  MonoidCheck.hs  Optional.hs  SemigroupCheck.hs  Three.hs  Trivial.hs  Two.hs  Validation.hs  mem.hs
chapter15/chapter15/test/: BoolConjTest.hs  BoolDisjTest.hs  BullTest.hs  FirstTest.hs  FourTest.hs  IdentityTest.hs  SemigroupTest.hs  Spec.hs  ThreeTest.hs  TrivialTest.hs  TwoTest.hs  ValidationTest.hs
chapter16/FuncTest/: FuncTest.cabal  README.md
chapter16/FuncTest/src/: Exes.hs  Lib.hs  Lib2.hs
chapter16/FuncTest/test/: Spec.hs
chapter17/: BadMonoid.hs  ChapterExes.hs  Combinations.hs  ConstantExes.hs  FixUpper.hs  ListExsc.hs  LookUps.hs  Valiadation.hs  ZipList.hs
chapter18/: ChapterExes.hs  EitherMonad.hs  EitherMonad2.hs  Identity.hs  List1.hs
