name:                FuncTest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/FuncTest#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , Exes
                       , Lib2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable FuncTest-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FuncTest
  default-language:    Haskell2010

test-suite FuncTest-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FuncTest
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/FuncTest
